--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "immer": "latest",
     "lodash-es": "latest",
     "lucide-react": "^0.575.0",
+    "playwright-stealth": "^0.0.1",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-hook-form": "^7.71.2",
