some minor changes

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "api:dev": "node --watch server/src/index.js",
+    "api:start": "node server/src/index.js",
+    "dev:full": "concurrently \"npm run dev\" \"npm run api:dev\"",
     "build": "tsc && vite build",
     "test": "node --experimental-strip-types --test tests/*.test.ts",
     "benchmark": "node --experimental-strip-types benchmarks/estimator-benchmark.ts",
@@ -22,11 +25,22 @@
     "@tauri-apps/plugin-dialog": "latest",
     "@tauri-apps/plugin-fs": "latest",
     "@tauri-apps/plugin-opener": "^2.5.3",
+    "bcryptjs": "^3.0.2",
+    "better-sqlite3": "^11.10.0",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
+    "express": "^4.21.2",
+    "express-rate-limit": "^8.1.0",
+    "helmet": "^8.1.0",
     "immer": "latest",
+    "jsonwebtoken": "^9.0.2",
     "lodash-es": "latest",
     "lucide-react": "^0.575.0",
+    "morgan": "^1.10.1",
+    "multer": "^2.0.2",
+    "nodemailer": "^7.0.10",
     "playwright-stealth": "^0.0.1",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
@@ -36,6 +50,7 @@
     "react-router-dom": "^7.13.0",
     "react-to-print": "latest",
     "recharts": "^3.7.0",
+    "stripe": "^18.4.0",
     "tailwind-merge": "^3.5.0",
     "uuid": "^13.0.0",
     "zod": "^4.3.6",
@@ -51,6 +66,7 @@
     "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.24",
+    "concurrently": "^9.2.1",
     "eslint": "^9.38.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.24",
