--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "helmet": "^8.1.0",
     "immer": "latest",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^4.2.0",
+    "jspdf-autotable": "^5.0.7",
     "lodash-es": "latest",
     "lucide-react": "^0.575.0",
     "morgan": "^1.10.1",
@@ -58,12 +60,12 @@
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2.10.0",
-    "@typescript-eslint/eslint-plugin": "^8.46.1",
-    "@typescript-eslint/parser": "^8.46.1",
     "@types/lodash-es": "latest",
     "@types/react": "^19.2.14",
     "@types/react-dom": "^19.2.3",
     "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.46.1",
+    "@typescript-eslint/parser": "^8.46.1",
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.24",
     "concurrently": "^9.2.1",
